--- a/assets/stylesheets/scss/layout/_header.scss
+++ b/assets/stylesheets/scss/layout/_header.scss
@@ -64,7 +64,7 @@
                 #nav-close {
                     display: none;
                     color: $white-color;
-                    text-align: end;                                              
+                    text-align: right;                                              
                     padding: 20px;
                     cursor: pointer;
                 }
